updated version with remote data collection

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>JetEngineBracket_Design | UXF WebGL Experiment</title>
+    <title>Design Task| UXF WebGL</title>
     <link rel="stylesheet" href="./Template/style.css" />
     <script src="Build/UnityLoader.js"></script>
 
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1>JetEngineBracket_Design</h1>
+    <h1>Design Task</h1>
 
     <div class="centered" style="width: 960px;">
         <!-- Edit the description field in Unity WebGL Player Settings -->
@@ -82,7 +82,7 @@
         // Unity Initialization
         var unityInstance = UnityLoader.instantiate(
             "unity-container",
-            "Build/build3.json", {
+            "Build/build4.json", {
                 onProgress: customProgress
             }
         );
